--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.20",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
-    "bootstrap": "^5.3.2",
     "next": "14.0.3",
     "react": "^18",
-    "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
     "react-redux": "^9.0.1",
     "redux": "^5.0.0",
