--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "@next/font": "^14.0.4",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "next": "14.0.3",
