--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@next/font": "^14.0.4",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
+    "generate-secret": "^0.1.7",
     "next": "14.0.3",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.0.1",
@@ -26,6 +29,7 @@
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
