--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "i18nexus pull && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -21,8 +21,10 @@
     "generate-secret": "^0.1.7",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
+    "next-i18n-router": "^5.3.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-intl": "^6.6.2",
     "react-redux": "^9.0.1",
     "redux": "^5.0.0",
     "redux-persist": "^6.0.0"
@@ -33,8 +35,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-intl": "^3.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
+    "i18nexus-cli": "^3.3.0",
     "typescript": "^5"
   }
 }
